tests/out/error/mutability/ident.out
tests/out/error/mutability/ident.in.bt:7:2 error: `s` is not declared as mutable
